--- a/highlighter.css
+++ b/highlighter.css
@@ -21,6 +21,26 @@
     tab-size:4;
     line-height:12pt;
 }
+/**/
+.highlighted_cpp span.characterLiteral{
+    color:blue;
+}
+.highlighted_cpp span.comment{
+    color:gray;
+}
+.highlighted_cpp span.cStringLiteral{
+    color:blue;
+}
+.highlighted_cpp span.numberLiteral{
+    color:darkviolet;
+}
+.highlighted_cpp span.operator{
+    color:red;
+}
+.highlighted_cpp span.preprocessingDirective{
+    color:green;
+}
+/**/
 .highlighted_cpp span.keywords{
     color:darkblue;
     font-weight:bold;
@@ -39,26 +59,8 @@
     font-weight:bold;
     line-height:0px;
 }
-.highlighted_cpp span.number{
-    color:darkviolet;
-}
 .highlighted_cpp span.preprocessorInstruction{
     color:green;
-}
-.highlighted_cpp span.operators{
-    color:red;
-}
-.highlighted_cpp span.characterLiteral{
-    color:blue;
-}
-.highlighted_cpp span.cStringLiteral{
-    color:blue;
-}
-.highlighted_cpp span.multiLineComment{
-    color:gray;
-}
-.highlighted_cpp span.singleLineComment{
-    color:gray;
 }
 .highlighted_cpp span.includePI{
     color:darkred;
