--- a/highlighter.css
+++ b/highlighter.css
@@ -1,3 +1,6 @@
+.lineNumber::before{
+    content:attr(data-line-number);
+}
 .bordered{
     word-break:break-all;
 }
@@ -11,6 +14,7 @@
     color:gray;
     vertical-align:top;
     height:12pt;
+    white-space:nowrap;
 }
 .bordered td.content{
     white-space:pre;
@@ -39,6 +43,9 @@
 }
 .highlighted_cpp span.preprocessingDirective{
     color:green;
+}
+.highlighted_cpp span.test{
+    color:orange;
 }
 /**/
 .highlighted_cpp span.keywords{
