--- a/highlighter.css
+++ b/highlighter.css
@@ -44,10 +44,12 @@
 .highlighted_cpp span.preprocessingDirective{
     color:green;
 }
-.highlighted_cpp span.test{
-    color:orange;
+.highlighted_cpp span.headerName{
+    color:darkred;
 }
-/**/
+.highlighted_cpp .definePD span.operator{
+    color:darkblue;
+}
 .highlighted_cpp span.keywords{
     color:darkblue;
     font-weight:bold;
@@ -66,6 +68,7 @@
     font-weight:bold;
     line-height:0px;
 }
+/**/
 .highlighted_cpp span.preprocessorInstruction{
     color:green;
 }
